--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+title: NLP Power
+description: The First Workshop on Efficient Benchmarking in NLP.
+show_downloads: true
+google_analytics:
 theme: jekyll-theme-dinky
